Rewrite the remaining 340 practice files and fix 122 real bugs
Completes the per-file pass: every practice file now opens with the same
teaching header and ends with a main() whose cases print actual next to
expected. 328 files rewritten, 12 Spring and WorkFlowExecutor files given a
role-in-the-project header only because they need jars a standalone javac has
no classpath for.

122 of these files had genuine defects, found by actually running them:

Crashes and compile failures
- LCA, DeleteNodesAndReturnForest, HouseRobber and MaximumSubarraySumWithOneDeletion
  did not compile at all (bad constructor call, non-static nested classes,
  duplicate method signature, a closing paren swallowed by a comment)
- ReverseOddLevelsOfBinaryTree threw on a null root; SubsetSumEqualsToTarget
  recursed to StackOverflowError on an empty array; RodCutting and
  JobSchedulingMaxProfit indexed out of bounds

Wrong answers
- FloydWarshall relaxed through unreachable cells, inventing finite distances
- BridgesInGraph only searched from node 0, so bridges in every other component
  were missed
- FindAllPeopleWithSecret ignored meeting timestamps, letting the secret travel
  backwards in time
- OptimalPath never initialised the left edge, so paths climbing column 0 were lost
- AlienDictionary accepted an invalid dictionary; ParallelCourses returned a
  semester count instead of -1 on a cycle
- MinimumMultiplications overflowed int before taking the modulus
- CountSubsequenceWithTargetSum stopped as soon as the target was met

State that leaked between calls
- ConstructBSTfromPreorder, MaximumDifferenceBetweenNodeAndAncestor,
  MinimumFallingPathSum, NumberOfIslands and several sort helpers gave a
  different answer on a second call, or quietly sorted the caller's array

Misleading output
- Celebrity had a knows() stub that always returned false, so the demo could
  never find a celebrity
- CoinChangeMinimum and MostStonesRemoved printed answers under labels copied
  from a different pro